# dp-wizard

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  CHANGELOG.md  LICENSE  README-PYPI.md  README.md  WHAT-WE-LEARNED.md  changelog.py  ci.sh  dependencies.py  pyproject.toml  requirements-app.in  requirements-app.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug-back.md  bug-front.md  bug.md  feature.md  maybe-next.md  nice-to-have.md  poc.md  question.md
.github/workflows/: test.yml
dp_creator_ii/: __init__.py  app.py  argparse_helpers.py  converters.py  template.py
dp_creator_ii/app/: __init__.py  analysis_panel.py  dataset_panel.py  plots.py  results_panel.py  ui_helpers.py
dp_creator_ii/app/components/: column_module.py  inputs.py  outputs.py  plots.py
dp_creator_ii/app/css/: styles.css
dp_creator_ii/templates/: README.md  context.py  imports.py  notebook.py  privacy_unit.py  script.py
dp_creator_ii/tests/: test_app.py  test_arg_parser.py  test_converters.py  test_csv.py  test_help.py  test_misc.py  test_mock_data.py  test_template.py
dp_creator_ii/tests/fixtures/: expected-script.py  fake-executed.ipynb  fake.csv
dp_creator_ii/utils/: argparse_helpers.py  converters.py  csv_helper.py  dp_helper.py  mock_data.py  template.py
dp_creator_ii/utils/templates/: README.md  __init__.py  context.py
dp_creator_ii/utils/templates/no-tests/: _column_config.py  _context.py
dp_wizard/: __init__.py
dp_wizard/analyses/: __init__.py  protocol.py
dp_wizard/analyses/histogram/: __init__.py
dp_wizard/analyses/mean/: __init__.py
dp_wizard/app/: __init__.py  about_panel.py  analysis_panel.py  dataset_panel.py  feedback_panel.py  results_panel.py
dp_wizard/app/components/: column_module.py  inputs.py  outputs.py  plots.py
dp_wizard/app/css/: styles.css
dp_wizard/tmp/: .gitignore
dp_wizard/utils/: argparse_helpers.py  code_template.py  converters.py  csv_helper.py  dp_helper.py  mock_data.py  shared.py
dp_wizard/utils/code_generators/: __init__.py  _template.py  abstract_generator.py  notebook_generator.py  script_generator.py
dp_wizard/utils/templates/: __init__.py
tests/: test_app.py  test_arg_parser.py  test_converters.py  test_csv.py  test_misc.py  test_mock_data.py  test_template.py
tests/fixtures/: abc.csv  default_app.py  demo_app.py  expected-script.py  fake-executed.ipynb  fake-stripped.ipynb  fake.csv  fake.ipynb  fake.py
tests/fixtures/apps/: cloud_app.py  default_app.py  demo_app.py
tests/utils/: test_argparse_helpers.py  test_code_generators.py  test_code_template.py  test_converters.py  test_csv_helper.py  test_misc.py  test_shared.py  test_templates.py
(+59 files in other folders)
