[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dp_wizard"
authors = [{name = "Chuck McCallum", email = "mccallucc@gmail.com"}]
readme = "README-PYPI.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "shiny",
    "faicons",
    "matplotlib",
    "opendp[polars]==0.12.0",
    "jupytext",
    "jupyter-client",
    "nbconvert",
    "ipykernel",
    "black",
    "pyyaml",
]

[project.scripts]
dp-wizard = "dp_wizard:main"

[project.urls]
Home = "https://github.com/opendp/dp-wizard"

[tool.pyright]
include = ["dp_wizard"]
ignore = ["**/no-tests/"]
