[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dp_wizard"
authors = [{name = "The OpenDP Project", email = "info@opendp.org"}]
readme = "README-PYPI.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["differential privacy"]
dynamic = ["version", "description"]
dependencies = [
    "shiny",
    "faicons",
    "matplotlib",
    "opendp[polars]==0.12.1a20250227001",
    "jupytext",
    "jupyter-client",
    "nbconvert[webpdf]",
    "ipykernel",
    "black",
    "pyyaml",

    # Pin minimum versions if we've had problems.
    "pyarrow>=16.0.0",
]

[options]
python_requires = ">=3.10"

[project.scripts]
# Prefer dash in name where allowed (repo named and executable)
# but provide alias to minimize frustration.
dp-wizard = "dp_wizard:main"
dp_wizard = "dp_wizard:main"

[project.urls]
Home = "https://github.com/opendp/dp-wizard"

[tool.pyright]
include = ["dp_wizard"]
ignore = ["**/no-tests/"]
